--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -7,10 +7,10 @@
       <li nz-menu-item routerLink="/get">Get Playlist</li>
     </ul>
   </nz-header>
-  <nz-layout>
-    <nz-content style="padding:50px 50px;">
+    <nz-content style="padding:50px; margin-bottom: 110px;">
       <router-outlet></router-outlet>
     </nz-content>
-  </nz-layout>
-  <nz-footer style="text-align: center;">PLaylist W Friends ©2018</nz-footer>
+  <nz-footer style="text-align: center;">
+    <div class="foot"></div>
+    PLaylist W Friends ©2018</nz-footer>
 </nz-layout>
