--- a/Frontend/src/app/create/create.component.html
+++ b/Frontend/src/app/create/create.component.html
@@ -1,8 +1,13 @@
 <div nz-row class='main'>
     <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
-        <h1>Playlist with friends!</h1>
-        <button nz-button nzType="primary">Create Playlist</button>
-        <h3>Inicia Sesión con Spotify para crear una playlist con amigos.</h3>
-        <a class="btn teal darken-2" href="/login">Inicia Sesión</a>
+        Playlist with Friends
     </div>
+</div>
+<div nz-row>
+    <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+        <div class="info">
+            <h3>Crea una playlist con musica para todos.</h3>
+            <button nz-button nzSize="large" nzType="primary">Create Playlist</button>
+        </div>        
+    </div>    
 </div>
