--- a/Frontend/src/app/create/create.component.css
+++ b/Frontend/src/app/create/create.component.css
@@ -15,6 +15,11 @@
 .info{
     background:#fff; 
     text-align: center;
-    min-height: 468px;
+    min-height: 280px;
 
+}
+
+.info h3{
+    color: #ff0000;
+    padding-bottom: 5%;
 }
