--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -1,1 +1,23 @@
-<div style="background:#fff; padding: 24px; min-height: 280px;">Get playlist</div>
+<div nz-row class="join" style="background:#fff; padding: 24px; min-height: 280px; text-align: center;">
+        <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+            Get playlist
+        </div>
+    <div>
+            <input class="inputs"
+                style="width: 300px; height: 50px; margin-top: 10px;"
+                nz-input placeholder="Enter your code" nzSize="large">
+        </div>
+        <div>
+            <button class="boton"
+            style="width: 300px; height: 50px;"
+            nz-button [nzSize]="size" nzType="default">Join Playlist</button>
+        </div>
+        <div class="share" style="padding: 24px; text-align: center;">
+                Share
+        <div>
+        <div class="imagenIconos">
+            <img src="assets/icons/fb.png">
+            <img src="assets/icons/twitterIcon.png">
+        </div>
+    </div>
+    
