--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,10 +3,15 @@
     <div class="logo">
         <img src="assets/icons/pruebaIcono.png">
     </div>
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
+    <ul class="nav" nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
       <li nz-menu-item routerLink="/create">Create Playlist</li>
       <li nz-menu-item routerLink="/join">Join Playlist</li>
       <li nz-menu-item routerLink="/get">Get Playlist</li>
+    </ul>
+    <ul class="icons" nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
+      <li nz-menu-item routerLink="/create"><span><i class="anticon anticon-bars"></i></span></li>
+      <li nz-menu-item routerLink="/join"><span><i class="anticon anticon-plus"></i></span></li>
+      <li nz-menu-item routerLink="/get"><span><i class="anticon anticon-download"></i></span></li>
     </ul>
   </nz-header>
     <nz-content style="padding:50px; margin-bottom: 110px;">
