--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -5,12 +5,19 @@
     <div>
             <input class="inputs"
                 style="width: 300px; height: 50px; margin-top: 10px;"
-                nz-input placeholder="Enter your code" nzSize="large">
+                nz-input placeholder="Playlist Name" nzSize="large">
         </div>
+       <div>
+            <nz-card class="texto"
+            style="width:300px; height: 50px; margin-bottom: 10px; margin-left: 417px;">
+                    <p>Card content<br></p>
+                    <p> </p>
+                  </nz-card>
+       </div>
         <div>
             <button class="boton"
-            style="width: 300px; height: 50px;"
-            nz-button [nzSize]="size" nzType="default">Join Playlist</button>
+            style="width: 300px; height: 50px; margin-top: 10px;"
+            nz-button [nzSize]="size" nzType="default">Add Playlist to Spotify</button>
         </div>
         <div class="share" style="padding: 24px; text-align: center;">
                 Share
