backend, frontend and db connection

--- a/Frontend/src/app/create/create.component.html
+++ b/Frontend/src/app/create/create.component.html
@@ -7,7 +7,7 @@
     <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
         <div class="info">
             <h3>Crea una playlist con musica para todos.</h3>
-            <button nz-button nzSize="large" nzType="primary">Create Playlist</button>
+            <button (click)='this.redirect()' nz-button nzSize="large" nzType="primary">Create Playlist</button>
         </div>        
     </div>    
 </div>
