--- a/Frontend/src/app/show-code/show-code.component.css
+++ b/Frontend/src/app/show-code/show-code.component.css
@@ -20,3 +20,9 @@
     color: #39bfa3;
     font-size: 50px !important;
 }
+
+.imagenIconos img{
+    height: 40px;
+    width: 50px;
+    padding-right: 10px;
+}
