--- a/Frontend/src/app/show-code/show-code.component.html
+++ b/Frontend/src/app/show-code/show-code.component.html
@@ -13,8 +13,11 @@
           
           <div class="share" style="padding: 24px; text-align: center; margin-left: 30px;">
             Share
-          <div>
-          
+            <div class="imagenIconos">
+                <img src="assets/icons/fb.png">
+                <img src="assets/icons/twitterIcon.png">
+            </div>
+          </div>
       </div>        
   </div>    
 </div>
