--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -1,30 +1,43 @@
-<div nz-row class="join" style="background:#fff; padding: 24px; min-height: 280px; text-align: center;">
-        <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
-            Get playlist
-        </div>
-    <div>
+<div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+    <div nz-col class='join'nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+        Get Playlist
+    </div>
+</div>
+<div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24' style="background: #ffffff">
+    <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+        <div>
             <input class="inputs"
-                style="width: 300px; height: 50px; margin-top: 10px;"
+                style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
                 nz-input placeholder="Playlist Name" nzSize="large">
         </div>
-       <div>
-            <nz-card class="texto"
-            style="width:300px; height: 50px; margin-bottom: 10px; margin-left: 417px;">
-                    <p>Card content<br></p>
-                    <p> </p>
-                  </nz-card>
-       </div>
-        <div>
-            <button class="boton"
-            style="width: 300px; height: 50px; margin-top: 10px;"
-            nz-button [nzSize]="size" nzType="default">Add Playlist to Spotify</button>
-        </div>
-        <div class="share" style="padding: 24px; text-align: center;">
-                Share
-        <div>
-        <div class="imagenIconos">
-            <img src="assets/icons/fb.png">
-            <img src="assets/icons/twitterIcon.png">
-        </div>
+        
     </div>
+</div>    
+<div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24' style="background: #ffffff">
+        <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+            <div>
+                <input class="code" disabled
+                    style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
+                    nz-input placeholder="KJS0928JS" nzSize="large">
+            </div>
+            
+        </div>
+    </div> 
+<div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24' style="background: #ffffff">
+    <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
+        <button class="boton"
+            style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
+            nz-button [nzSize]="size" nzType="default">
+                Add Playlist to Spotify
+        </button>
+    </div>
+    <div class="share" style="padding: 24px; text-align: center;">
+            Share
+    </div>
+    <div class="imagenIconos">
+        <img src="assets/icons/fb.png">
+        <img src="assets/icons/twitterIcon.png">
+    </div>
+</div>
+
     
