--- a/Frontend/src/app/join/join.component.css
+++ b/Frontend/src/app/join/join.component.css
@@ -6,19 +6,19 @@
     text-align: center !important;
     padding-bottom: 10px !important;
     align-content: center;
-    border-color: #ff0000;
+    border-color: #e8a50c;
     font-size: 20px;
 }
 .share{
     color: #39bfa3;
-    font-size: 50px !important;
+    font-size:40px !important;
     align-content: center;
 }
 .boton{
     text-align: center !important;
     align-content: center;
     padding-bottom: 10px !important;
-    border-color: #ff0000;
+    border-color: #e8a50c;
     font-size: 20px;
 }
 .imagenIconos img{
