--- a/Frontend/src/app/join/join.component.css
+++ b/Frontend/src/app/join/join.component.css
@@ -26,3 +26,13 @@
     width: 50px;
     padding-right: 10px;
 }
+@media only screen and (max-width: 950px) {
+    .join{
+        font-size: 75px;
+    }
+}
+@media only screen and (max-width: 650px) {
+    .join{
+        font-size: 55px;
+    }
+}
