--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nz-layout >
   <nz-header>
     <div class="logo">
-        <img src="assets/icons/pruebaIcono.png">
+      <a><img routerLink="/create" src="assets/icons/pruebaIcono.png"></a>  
     </div>
     <ul class="nav" nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
       <li nz-menu-item routerLink="/create">Create Playlist</li>
