--- a/Frontend/src/app/show-code/show-code.component.html
+++ b/Frontend/src/app/show-code/show-code.component.html
@@ -13,7 +13,7 @@
           
           <div class="share" style="padding: 24px; text-align: center; margin-left: 30px;">
             Share
-          <div>
+          </div>
           
       </div>        
   </div>    
