--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -16,9 +16,9 @@
 <div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24' style="background: #ffffff">
         <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
             <div>
-                <input class="code" disabled
+                <input class="code" 
                     style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
-                    nz-input placeholder="KJS0928JS" nzSize="large">
+                    nz-input placeholder="Playlist Code" nzSize="large">
             </div>
             
         </div>
@@ -27,7 +27,7 @@
     <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
         <button class="boton"
             style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
-            nz-button [nzSize]="size" nzType="default">
+            nz-button [nzSize]="size" nzType="primary">
                 Add Playlist to Spotify
         </button>
     </div>
@@ -35,8 +35,8 @@
             Share
     </div>
     <div class="imagenIconos">
-        <img src="assets/icons/fb.png">
-        <img src="assets/icons/twitterIcon.png">
+        <a><img src="assets/icons/fb.png"></a>
+        <a><img src="assets/icons/twitterIcon.png"></a>
     </div>
 </div>
 
