--- a/Frontend/src/app/join/join.component.css
+++ b/Frontend/src/app/join/join.component.css
@@ -6,8 +6,8 @@
     text-align: center !important;
     padding-bottom: 10px !important;
     align-content: center;
-    border-color: #e8a50c;
     font-size: 20px;
+    border-color: #1A90FE;
 }
 .share{
     color: #39bfa3;
@@ -18,7 +18,6 @@
     text-align: center !important;
     align-content: center;
     padding-bottom: 10px !important;
-    border-color: #e8a50c;
     font-size: 20px;
 }
 .imagenIconos img{
