--- a/Frontend/src/app/join/join.component.html
+++ b/Frontend/src/app/join/join.component.html
@@ -6,17 +6,17 @@
         <input class="inputs"
             style="width: 300px; height: 50px; margin-top: 10px;"
             nz-input placeholder="Enter your code" nzSize="large">
-    </div>
+</div>
     <div>
         <button class="boton"
         style="width: 300px; height: 50px;"
-        nz-button [nzSize]="size" nzType="default">Join Playlist</button>
+        nz-button [nzSize]="size" nzType="primary">Join Playlist</button>
     </div>
     <div class="share" style="padding: 24px; text-align: center;">
             Share
     <div>
     <div class="imagenIconos">
-        <img src="assets/icons/fb.png">
-        <img src="assets/icons/twitterIcon.png">
+        <a><img src="assets/icons/fb.png"></a>
+        <a><img src="assets/icons/twitterIcon.png"></a>
     </div>
 </div>
