--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -35,7 +35,7 @@
             Share
     </div>
     <div class="imagenIconos">
-        <a><img src="assets/icons/fb.png"></a>
+        <a routerLink="/error"><img src="assets/icons/fb.png"></a>
         <a><img src="assets/icons/twitterIcon.png"></a>
     </div>
 </div>
