lectura de los inputs con angular

--- a/Frontend/src/app/join/join.component.html
+++ b/Frontend/src/app/join/join.component.html
@@ -5,7 +5,9 @@
 <div>
         <input class="inputs"
             style="width: 300px; height: 50px; margin-top: 10px;"
-            nz-input placeholder="Enter your code" nzSize="large">
+            nz-input placeholder="Enter your code" 
+            nzSize="large"
+            [(ngModel)]="code">
 </div>
     <div>
         <button class="boton"
