--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -8,7 +8,9 @@
         <div>
             <input class="inputs"
                 style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
-                nz-input placeholder="Playlist Name" nzSize="large">
+                nz-input placeholder="Playlist Name" 
+                nzSize="large"
+                [(ngModel)]="name">
         </div>
         
     </div>
@@ -18,7 +20,9 @@
             <div>
                 <input class="code" 
                     style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
-                    nz-input placeholder="Playlist Code" nzSize="large">
+                    nz-input placeholder="Playlist Code" 
+                    nzSize="large"
+                    [(ngModel)]="code">
             </div>
             
         </div>
