create playlist handler, callback finished

--- a/Frontend/src/app/show-code/show-code.component.html
+++ b/Frontend/src/app/show-code/show-code.component.html
@@ -8,7 +8,7 @@
       <div class="code">
           <h3>Use the next code to access the playlist. </h3>
           <nz-card style="margin-right:30%; margin-left:30%;">
-             <nz-card-meta nzTitle="6DBS8-SYO09"></nz-card-meta>
+             <h2 class="pcode">{{playlist_info.playlistCode}}</h2>
           </nz-card>
           
           <div class="share" style="padding: 24px; text-align: center; margin-left: 30px;">
