--- a/Frontend/src/app/join/join.component.css
+++ b/Frontend/src/app/join/join.component.css
@@ -7,7 +7,7 @@
     padding-bottom: 10px !important;
     align-content: center;
     font-size: 20px;
-    border-color: #1A90FE;
+    border-color: #001529;
 }
 .share{
     color: #39bfa3;
@@ -17,8 +17,7 @@
 .boton{
     text-align: center !important;
     align-content: center;
-    padding-bottom: 10px !important;
-    font-size: 20px;
+    font-size: 17px;
 }
 .imagenIconos img{
     height: 40px;
