get handler init, get and callback component

--- a/Frontend/src/app/error/error.component.html
+++ b/Frontend/src/app/error/error.component.html
@@ -7,7 +7,7 @@
   <div nz-col nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
       <div class="info">
           <h1>Try with another code.</h1>
-          <button (click)='this.redirect()' nz-button nzSize="large" nzType="primary">New Code</button>
+          <button nz-button nzSize="large" nzType="primary">New Code</button>
       </div>        
   </div>    
 </div>
