--- a/Frontend/src/app/get/get.component.html
+++ b/Frontend/src/app/get/get.component.html
@@ -29,9 +29,9 @@
     </div> 
 <div nz-row nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24' style="background: #ffffff">
     <div nz-col style="text-align: center; padding-bottom: 3%;" nzXs='24' nzSm='24' nzMd='24' nzLg='24' nzXl='24'>
-        <button (click)="this.reditect()" class="boton"
+        <button (click)="this.redirect()" class="boton"
             style="width: 300px; height: 50px; margin-right:30%; margin-left:30%;"
-            nz-button [nzSize]="size" nzType="primary">
+            nz-button [nzSize]="large" nzType="primary">
                 Add Playlist to Spotify
         </button>
     </div>
