--- a/Frontend/src/app/join/join.component.html
+++ b/Frontend/src/app/join/join.component.html
@@ -12,7 +12,7 @@
     <div>
         <button class="boton"
         style="width: 300px; height: 50px;"
-        nz-button (click)='redirect()' [nzSize]="size" nzType="primary">Join Playlist</button>
+        nz-button (click)='redirect()' [nzSize]="large" nzType="primary">Join Playlist</button>
     </div>
     <div class="share" style="padding: 24px; text-align: center;">
             Share
